        or from a corner (similar to the default mode of most other
        graphics tools).
      * The controls to modify the drawing behavior can be removed,
        for simplification of Tux Paint's interface (for younger users).

  * Other Improvements
    ------------------
    * New, smaller sizes available in "Eraser" tool.
      (h/t Jackson Bray for the suggestion)

  * Ports & Building
    ----------------
    * Corrections for Haiku not opening saved files.
      (Ref: https://github.com/haikuports/haikuports/issues/3045)
      Gerasim Troeglazov <3dEyes@gmail.com>

  * New Brushes
    -----------
    * Footprints
      * Human feet
        Based on Openclipart by "netalloy"
        (https://openclipart.org/artist/netalloy)
        Creative Commons Zero 1.0 Public Domain License

      * Paw (dog or cat like)
        Based on Openclipart by "alinager"
        (https://openclipart.org/artist/alinager)
        Creative Commons Zero 1.0 Public Domain License

      * Shoes
        Based on Openclipart by "Tavin"
        (https://openclipart.org/artist/Tavin)
        Creative Commons Zero 1.0 Public Domain License

  * Documentation updates
    ---------------------
    * Cleaned up HTML code of HTML-based documentation.

    * Sub-section links within README's Table of Contents.

  * Bug Fixes
    ---------
    * Mended issue where stamp descriptions were not loading
      when "getenv()" (e.g., "getenv("LANGUAGE")") returned an
      empty string, rather than a NULL.

    * Mended bug where corrupt text would appear as stamp
      descriptions, if we failed to know what language to use
      (see above).

  * Translation Updates:
    --------------------
    * Basque translation
      Alexander Gabilondo <alexgabi@irakasle.eus>

    * Galician translation
      Miguel Bouzada <mbouzada@gmail.com>

    * Icelandic translation
      Sveinn í Felli <sv1@fellsnet.is>

    * Santali translation (Ol-Chiki)
      Prasanta Hembram <prasantahembram720@gmail.com>
